; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-has-property.c_assert_boolean_and_release.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-has-property.c_assert_boolean_and_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @assert_boolean_and_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_boolean_and_release(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @jerry_value_is_boolean(i32 %5)
  %7 = call i32 @TEST_ASSERT(i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @jerry_get_boolean_value(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = icmp eq i32 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @TEST_ASSERT(i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @jerry_release_value(i32 %14)
  ret void
}

declare dso_local i32 @TEST_ASSERT(i32) #1

declare dso_local i32 @jerry_value_is_boolean(i32) #1

declare dso_local i32 @jerry_get_boolean_value(i32) #1

declare dso_local i32 @jerry_release_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
